5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1723_2507.log
== TEST (2019-05-14 10:34:58) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
pr = int(input("Pirarucus retirados para venda: "))
m = 0
while(qi > 0 and qi < 8000):
	qi = (qi * pc) + pr
	m = m + 1
	if(qi >= 0):
		print("ZERO")
	elif(qi <= 8000):
		print("MAXIMO")
print(m)
-- OUTPUT:
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:37:46) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
pr = int(input("Pirarucus retirados para venda: "))
m = 0
while(qi > 0 and qi < 8000):
	qi = (qi * pc) + pr
	m = m + 1
	if(qi >= 0):
		print("ZERO")
	elif(qi <= 8000):
		print("MAXIMO")
print(m)
-- OUTPUT:
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:38:19) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
pr = int(input("Pirarucus retirados para venda: "))
m = 0
while(qi > 0 and qi < 8000):
	qi = (qi * pc) + pr
	m = m + 1
if(qi >= 0):
		print("ZERO")
elif(qi <= 8000):
		print("MAXIMO")
print(m)
-- OUTPUT:
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:31) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
pr = int(input("Pirarucus retirados para venda: "))
m = 0
while(qi > 0 and qi < 8000):
	qi = (qi * pc) + pr
	m = m + 1
if(qi <= 0):
	print("ZERO")
elif(qi >= 8000):
	print("MAXIMO")
print(m)
-- OUTPUT:
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
ZERO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:41:31) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
pr = int(input("Pirarucus retirados para venda: "))
m = 0
while(qi > 0 and qi < 8000):
	qi = qi + (qi * pc) - pr
	m = m + 1
if(qi <= 0):
	print("ZERO")
elif(qi >= 8000):
	print("MAXIMO")
print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:41:48) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
pr = int(input("Pirarucus retirados para venda: "))
m = 0
while(qi > 0 and qi < 8000):
	qi = qi + (qi * pc) - pr
	m = m + 1
if(qi <= 0):
	print("ZERO")
elif(qi >= 8000):
	print("MAXIMO")
print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:42:07) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
pr = int(input("Pirarucus retirados para venda: "))
m = 0
while(qi > 0 and qi < 8000):
	qi = qi + (qi * pc) - pr
	m = m + 1
if(qi <= 0):
	print("ZERO")
elif(qi >= 8000):
	print("MAXIMO")
print(m)
-- EXECUTION TIME:
0.141118
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:42:51) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
pr = int(input("Pirarucus retirados para venda: "))
m = 0
while(qi > 0 and qi < 8000):
	qi = qi + (qi * pc) - pr
	m = m + 1
if(qi = 0):
	print("ZERO")
elif(qi = 8000):
	print("MAXIMO")
print(m)
-- EXECUTION TIME:
0.126055
-- ERROR:
  File "/home/codebench/codes/1723/2507/main.py", line 8
    if(qi = 0):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:43:04) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
pr = int(input("Pirarucus retirados para venda: "))
m = 0
while(qi > 0 and qi < 8000):
	qi = qi + (qi * pc) - pr
	m = m + 1
if(qi < 0):
	print("ZERO")
elif(qi > 8000):
	print("MAXIMO")
print(m)
-- EXECUTION TIME:
0.128013
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:43:28) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
pr = int(input("Pirarucus retirados para venda: "))
m = 0
while(qi >= 0 and qi <= 8000):
	qi = qi + (qi * pc) - pr
	m = m + 1
if(qi < 0):
	print("ZERO")
elif(qi > 8000):
	print("MAXIMO")
print(m)
-- EXECUTION TIME:
0.15471
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:43:39) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
pr = int(input("Pirarucus retirados para venda: "))
m = 0
while(qi >= 0 and qi <= 8000):
	qi = qi + (qi * pc) - pr
	m = m + 1
if(qi <= 0):
	print("ZERO")
elif(qi >= 8000):
	print("MAXIMO")
print(m)
-- EXECUTION TIME:
0.127925
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:45:30) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
m = 0
while(qi >= 0 and qi <= 8000):
	pr = int(input("Pirarucus retirados para venda: "))
	qi = qi + (qi * pc) - pr
	m = m + 1
if(qi <= 0):
	print("ZERO")
elif(qi >= 8000):
	print("MAXIMO")
print(m)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:45:48) 
-- CODE:
qi = int(input("Quantidade inicial de peixes: "))
pc = float(input("Percentual de crescimento da qi: "))/100
m = 0
while(qi >= 0 and qi <= 8000):
	pr = int(input("Pirarucus retirados para venda: "))
	qi = qi + (qi * pc) - pr
	m = m + 1
if(qi <= 0):
	print("ZERO")
elif(qi >= 8000):
	print("MAXIMO")
print(m)
-- EXECUTION TIME:
0.165826
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
